<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.test.fragments.InfoPokemonFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/pokemon_fav"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/to_put_pokemon_a_favorite"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:src="@drawable/favorite_border"
            android:tag="not_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/pokemon_info_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/image_of_pokemon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pokemon_recyclerview_types"
            android:layout_width="80dp"
            android:layout_height="72dp"
            android:layout_marginEnd="17dp"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pokemon_info_image"
            app:layout_constraintHorizontal_bias="0.445"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.079"
            tools:listitem="@layout/type_layout" />

        <LinearLayout
            android:id="@+id/pokemon_info_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_info_image"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/poke_id"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:alpha="0.7"
                    android:textColor="@color/purple_200"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toStartOf="@id/pokemon_info_layout"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_info_image"
                    tools:text="#07" />

                <TextView
                    android:id="@+id/poke_info_id"
                    android:layout_width="56dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginVertical="6dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="3"
                    android:alpha="0.7"
                    android:text="@string/id"
                    android:textColor="@color/purple_200"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/poke_info_height"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginVertical="6dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="4"
                    android:alpha="0.7"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:lines="1"
                    android:paddingHorizontal="12dp"
                    android:textAllCaps="true"
                    android:textColor="@color/purple_200"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    tools:text="200" />

                <TextView
                    android:id="@+id/poke_height"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="6dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="3"
                    android:alpha="0.7"
                    android:text="@string/height"
                    android:textColor="@color/purple_200"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/poke_info_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginVertical="6dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:lines="1"
                    android:paddingHorizontal="12dp"
                    android:textAllCaps="true"
                    android:textColor="@color/purple_200"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    tools:text="100" />

                <TextView
                    android:id="@+id/poke_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginVertical="6dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:lines="1"
                    android:paddingHorizontal="12dp"
                    android:text="@string/weight"
                    android:textAllCaps="true"
                    android:textColor="@color/purple_200"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/pokemon_name"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="36dp"
            android:alpha="0.7"
            android:gravity="center"
            android:textColor="@color/purple_200"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pokemon_info_layout"
            tools:text="Pikachu" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pokemon_recyclerview_abilities"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_name"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/ability_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>